  [bug introduced in coreutils-5.3.0]

  'mv -n A B' no longer suffers from a race condition that can
  overwrite a simultaneously-created B.  This bug fix requires
  platform support for the renameat2 or renameatx_np syscalls, found
  in recent Linux and macOS kernels.  As a side effect, ‘mv -n A A’
  now silently does nothing if A exists.
  [bug introduced with coreutils-7.1]


** Improvements

  cut supports line lengths up to the max file size on 32 bit systems.
  Previously only offsets up to SIZE_MAX-1 were supported.

  stat and tail now know about the "exfs" file system, which is a
  version of XFS.  stat -f --format=%T now reports the file system type,
  and tail -f uses inotify.


* Noteworthy changes in release 8.29 (2017-12-27) [stable]

** Bug fixes

  b2sum no longer crashes when processing certain truncated check files.
  [bug introduced with b2sum coreutils-8.26]

  dd now ensures the correct cache ranges are specified for the "nocache"
  and "direct" flags.  Previously some pages in the page cache were not
  invalidated.  [bug introduced for "direct" in coreutils-7.5,
  and with the "nocache" implementation in coreutils-8.11]

  df no longer hangs when given a fifo argument.
  [bug introduced in coreutils-7.3]

  ptx -S no longer infloops for a pattern which returns zero-length matches.
  [the bug dates back to the initial implementation]

  shred --remove will again repeatedly rename files with shortening names
  to attempt to hide the original length of the file name.
  [bug introduced in coreutils-8.28]

  stty no longer crashes when processing settings with -F also specified.
  [bug introduced in fileutils-4.0]

  tail --bytes again supports non seekable inputs on all systems.
  On systems like android it always tried to process as seekable inputs.
  [bug introduced in coreutils-8.24]

  timeout will again notice its managed command exiting, even when
  invoked with blocked CHLD signal, or in a narrow window where